--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -9,8 +9,8 @@
       name="description"
       content="Patient Management System"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="/home/gitika/Documents/SPE-Major-Project2/SPE_Major_Project/Frontend/src/images/logo.jpg" />
+    <link rel="manifest" href="manifest.json" />
     <title>Patient Management System</title>
   </head>
   <body>
